# rapp-cloud-api

./: package.xml
cpp/: CMakeLists.txt
cpp/cmake/: RappCloudConfig.cmake.in
cpp/implementations/: CMakeLists.txt
cpp/includes/: CMakeLists.txt
cpp/includes/rapp-cloud-api/: face_detection.hpp  face_recognition.hpp  hazard_detection_door_check.hpp  hazard_detection_light_check.hpp  object_recognition_clear.hpp  object_recognition_detect.hpp  object_recognition_learn.hpp  object_recognition_load.hpp  path_planning_plan.hpp  path_planning_upload_map.hpp  send_email.hpp  service_call.hpp  speech_detection_sphinx4.hpp  upload_file.hpp  utils.hpp
